syntax = "proto3";

option csharp_namespace = "Common";
package snapshot;

service Configurator {
	rpc GetConfiguration (ConfigurationRequest) returns (stream ConfigurationContainer);
}

message ConfigurationRequest{
	string Group = 1;
}

message ConfigurationContainer{
	SessionSettings Session = 1;
	Collector CollectorParams = 2;
}

message SessionSettings{
	string SQLDialect = 1;
	string SessionStorageUser = 2;
	string SessionStoragePassword = 3;
	string SessionStorageHost = 4;
	string SessionStorageDB = 5;
}

message Collector{
	int64 ApiId = 1;
	string ApiHash = 2;
	string Phone = 3;
	string SessionName = 4;
	string Group = 5;
}